<resources>
    <string name="app_school_name" translatable="false">泡桐树小学境界校区</string>
    <string name="again_click_exit" translatable="false">再按一次退出程序</string>
    <string name="pull_to_refresh_pull_label" translatable="false">下拉刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label" translatable="false">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label" translatable="false">上拉加载更多</string>
    <string name="pull_to_refresh_footer_pull_flush" translatable="false">加载中</string>
    <string name="pull_to_refresh_footer_refreshing_label" translatable="false">加载中\u2026</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="xlistview_header_hint_normal" translatable="false">下拉刷新</string>
    <string name="xlistview_header_hint_ready" translatable="false">松开刷新数据</string>
    <string name="xlistview_header_hint_loading" translatable="false">正在加载...</string>
    <string name="xlistview_header_last_time" translatable="false">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal" translatable="false">查看更多</string>
    <string name="xlistview_footer_hint_ready" translatable="false">松开载入更多</string>
    <string name="xlist_loadmore_bottom_toast" translatable="false">到底了</string>
    <string name="xlist_loadmore_end_toast" translatable="false">没有了</string>
    <string name="app_name" translatable="false">成都市实验小学</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="phone_tips" translatable="false">联系方式为预留家长的手机号;如忘记请致电学校查询</string>
    <string name="authente_phone_hint" translatable="false">输入预留家属手机号码…</string>
    <string name="authente_name_hint" translatable="false">输入宝宝名字…</string>
    <string name="authente_point" translatable="false">《招生须知》</string>
    <string name="authente_text" translatable="false">验证</string>
    <string name="point_text" translatable="false">查看招生须知</string>
    <string name="fill_in_text" translatable="false">填资料/查分班</string>
    <string name="not_fill_w" translatable="false">未填写</string>
    <string name="index_people" translatable="false">搜索人姓名/拼音</string>
    <string name="submit" translatable="false">提 交</string>
    <string name="class_search" translatable="false">分班查询</string>
    <string name="submit_tips" translatable="false">请完整填写所有资料后，点击下方提交按钮，将资料提交至服务器！</string>
    <string name="man" translatable="false">男</string>
    <string name="woman" translatable="false">女</string>
    <string name="kg" translatable="false">kg</string>
    <string name="cm" translatable="false">cm</string>
    <string name="wu" translatable="false">无</string>
    <string name="define" translatable="false">自定义</string>
    <string name="selected" translatable="false">已选</string>
    <string name="selectable" translatable="false">可选</string>
    <string name="add" translatable="false">添加</string>
    <string name="tip" translatable="false">提示</string>
    <string name="submit_or_not" translatable="false">是否提交当前资料?</string>
    <string name="back2" translatable="false">直接返回</string>
    <string name="submit2" translatable="false">提交当前资料</string>
    <string name="result" translatable="false">查询结果</string>
    <string name="hint_e_b" translatable="false">请输入自定义的语言表达…</string>
    <string name="certificate" translatable="false">请选择证件类型</string>
    <string name="sfz" translatable="false">身份证</string>
    <string name="other" translatable="false">其他</string>
    <string name="cancle" translatable="false">取消</string>
    <string name="change" translatable="false">与＜监护人2＞手机号码交换</string>
    <string name="is_clear" translatable="false">这会清空所有已填选项，是否继续?</string>
    <string name="add_preission" translatable="false">当前操作,需要**权限。\n是否添加</string>
    <string name="main_title" translatable="false">实验小学</string>
    <string name="click_login" translatable="false">点击登录</string>
    <string name="login_type" translatable="false">请选择账号类型</string>
    <string name="teacher" translatable="false">教师</string>
    <string name="student" translatable="false">学生</string>
    <string name="login" translatable="false">登录</string>
    <string name="app_cancel" translatable="false">取消</string>
    <string name="app_back" translatable="false">返回</string>
    <string name="app_delete" translatable="false">删除</string>
    <string name="app_ok" translatable="false">确定</string>
    <string name="write_comment" translatable="false">写评论</string>
    <string name="not_school_news_again" translatable="false">暂无校园新闻,可点击重试</string>
    <string name="fail_load_again" translatable="false">加载失败,点击重试</string>
    <string name="loading_again" translatable="false">正在加载中,请稍后...</string>
    <string name="intro1" translatable="false">本应用程序版权所属：成都市实验小学，最终解释权为永风扬网络科技有限公司所有。</string>
    <string name="intro2" translatable="false">当前版本：1.0</string>
    <string name="intro3" translatable="false">应用分类：教育</string>
    <string name="log_off" translatable="false">注销登录</string>
    <string name="exit" translatable="false">退出应用</string>
    <string name="school_news" translatable="false">校园新闻</string>
    <string name="news_no_data" translatable="false">新闻加载中，下拉刷新~</string>
    <string name="news_detail" translatable="false">新闻详情</string>
    <string name="news_comment" translatable="false">评论</string>
    <string name="dealbook" translatable="false">每日食谱</string>
    <string name="schedule" translatable="false">课程表</string>
    <string name="about" translatable="false">关于</string>
    <string name="class_news" translatable="false">班级新闻</string>
    <string name="no_class_news" translatable="false">暂无班级新闻</string>
    <string name="affiche_head" translatable="false">公告</string>
    <string name="affiche_send" translatable="false">发布</string>
    <string name="affiche_detail" translatable="false">详情</string>
    <string name="affiche_send_title" translatable="false">标题</string>
    <string name="affiche_send_content" translatable="false">内容</string>
    <string name="comment_title" translatable="false">请输入标题</string>
    <string name="comment_content" translatable="false">请输入正文...</string>
    <string name="share" translatable="false">分享</string>
    <string name="comment" translatable="false">评论</string>
    <string name="good" translatable="false">赞</string>
    <string name="moments" translatable="false">班级圈</string>
    <string name="share_wx" translatable="false">微信好友</string>
    <string name="share_moments" translatable="false">朋友圈</string>
    <string name="share_weibo" translatable="false">新浪微博</string>
    <string name="zhuti_title" translatable="false">学校功能选择</string>
    <string name="zhuti_news_title" translatable="false">新闻主页</string>
    <string name="tishi" translatable="false">功能尚未开通哦,请联系服务提供商~</string>
    <string name="no_data" translatable="false">没有内容~</string>
    <string name="schoolhome_info_error" translatable="false">学校信息出错</string>
    <string name="schoolhome_info_tishi" translatable="false">点击屏幕进入~</string>
    <string name="main_left_title" translatable="false">频道分类</string>
    <string name="main_left_men1" translatable="false">新闻</string>
    <string name="main_left_men2" translatable="false">班级</string>
    <string name="main_left_men3" translatable="false">专题网站</string>
    <string name="main_left_men4" translatable="false">视频网站</string>
    <string name="main_left_english" translatable="false">英文网站</string>
    <string name="right_layout_collect" translatable="false">收藏</string>
    <string name="right_layout_publish" translatable="false">发布</string>
    <string name="right_layout_comment" translatable="false">评论</string>
    <string name="right_layout_classroom" translatable="false">班级</string>
    <string name="below_item1" translatable="false">门户网站</string>
    <string name="below_item2" translatable="false">班级网站</string>
    <string name="below_item3" translatable="false">校长信箱</string>
    <string name="below_item4" translatable="false">更 多</string>
    <string name="ss_search_edit_content_hint" translatable="false">输入学校名称搜索</string>
    <string name="entry_userName" translatable="false">用户名:</string>
    <string name="entry_userPassword" translatable="false">密 码:</string>
    <string name="entry_textEntry" translatable="false">登 录</string>
    <string name="entry_textEntry_title" translatable="false">用户登录</string>
    <string name="entry_textpwd" translatable="false">忘记密码?</string>
    <string name="entry_hint_name" translatable="false">请输入用户名</string>
    <string name="entry_hint_pwd" translatable="false">请输入密码</string>
    <string name="no_null" translatable="false">亲帐号和密码不能为空哦</string>
    <string name="no_net" translatable="false">亲您的网络开小差了哦</string>
    <string name="no_net1" translatable="false">网络异常获取内容失败</string>
    <string name="update_app_dioag_title" translatable="false">更新提示</string>
    <string name="update_app_dioag_content" translatable="false">软件已更新,当前版本可能无法正常使用~</string>
    <string name="xiacigengxin" translatable="false">下次更新</string>
    <string name="gengxin" translatable="false">更新</string>
    <string name="news_title" translatable="false">盐道街小学新闻</string>
    <string name="news_title1" translatable="false">天涯石小学</string>
    <string name="connect_error" translatable="false">连接出错</string>
    <string name="com_hint" translatable="false">写评论,最多250个字</string>
    <string name="comment_good" translatable="false">评论成功,等待审核</string>
    <string name="comment_false" translatable="false">网络异常评论失败</string>
    <string name="comment_false3" translatable="false">亲 您还没有登录哦~</string>
    <string name="comment_false1" translatable="false">亲 登录过后才可评论哦~</string>
    <string name="comment_false2" translatable="false">亲 登录过后才可收藏哦~</string>
    <string name="collect_false" translatable="false">网络异常收藏失败</string>
    <string name="collect_true" translatable="false">收藏成功</string>
    <string name="text_no_data" translatable="false">没有内容点击刷新~</string>
    <string name="classroom" translatable="false">班级选择</string>
    <string name="addenw_menhu" translatable="false">门户网站</string>
    <string name="addenw_banji" translatable="false">班级网站</string>
    <string name="addnew_title" translatable="false">新闻标题</string>
    <string name="addnew_tutle_hint" translatable="false">请输入新闻标题</string>
    <string name="addnew_title_tontent" translatable="false">新闻内容</string>
    <string name="addnew_title_tontent1" translatable="false">新闻详细内容</string>
    <string name="addnew_title_tontent_hint" translatable="false">请输入新闻内容最多500字</string>
    <string name="right_zhuxiao" translatable="false">注销登录</string>
    <string name="rank" translatable="false">排名</string>
    <string name="rank_name" translatable="false">姓名</string>
    <string name="reward_count" translatable="false">奖励总数</string>
    <string name="take_photo" translatable="false">拍照</string>
    <string name="vote_tips" translatable="false">投票成功后将无法修改投票选择,是否继续?</string>
    <string name="continue_vote" translatable="false">继续提交</string>
    <string name="upload_type" translatable="false">图片获取方式</string>
    <string name="album" translatable="false">相册</string>
    <string name="sunday" translatable="false">日</string>
    <string name="monday" translatable="false">一</string>
    <string name="thesday" translatable="false">二</string>
    <string name="wednesday" translatable="false">三</string>
    <string name="thursday" translatable="false">四</string>
    <string name="friday" translatable="false">五</string>
    <string name="saturday" translatable="false">六</string>
    <string name="ok" translatable="false">确定</string>
    <string name="cancel" translatable="false">取消</string>
</resources>