<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="20dp"
        android:background="@color/light_gray01"
        android:text="@string/define"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <EditText 
            android:id="@+id/item_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_defalut"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:paddingTop="7dp"
            android:paddingLeft="10dp"
            android:paddingBottom="7dp"
            android:hint="@string/hint_e_b"
            android:textSize="12sp"/>
        
        <TextView 
            android:id="@+id/add_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/post_shape"
            />
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_gray01"
        android:text="@string/selected"/>
    
    <TextView 
        android:id="@+id/selected_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minLines="3"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_gray01"
        android:text="@string/selectable"/>
    
    <GridView 
        android:id="@+id/item_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"
        android:listSelector="#00000000"
        android:numColumns="3"></GridView>
</LinearLayout>
