<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_stroke"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/certificate" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/include_gray_line" />

            <TextView
                android:id="@+id/sfz_type"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/sfz"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/include_gray_line" />

            <TextView
                android:id="@+id/other_type"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/other"
                android:textColor="@color/blue"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/cancle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_stroke"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>