<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="120dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/radius10_white"
    android:orientation="vertical"
    android:weightSum="3" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="6dp"
        android:text="@string/tip"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:paddingTop="6dp"
        android:text="@string/vote_tips"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/light_gray2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_background"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/blue" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:background="@color/light_gray2" />

        <Button
            android:id="@+id/continue_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_background"
            android:gravity="center"
            android:text="@string/continue_vote"
            android:textColor="@color/blue" />
    </LinearLayout>

</LinearLayout>